--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,10 +1,15 @@
-<div class="col-sm-3">
-  <div class="card" style="width: 18rem;">
-    <div class="card-block">
-      <h5 class="card-title">{{product.name}}</h5>
-        <p class="card-text" [innerHTML]="product.description"></p>
-        <p class="card-text">Type: {{product.price}}</p>
-        <a routerLink="/list/{{product.productId}}" class="btn btn-primary">products</a>
+
+  <div class="col mt-4 p-2">
+    <div class="card p-2" style="width: 13rem;">
+
+        <div class="card-block">
+          <h5 class="card-title">{{product.name}}</h5>
+            <p class="card-text" [innerHTML]="'Description : '+product.description"></p>
+            <p class="card-text">Price: {{product.price}}</p>
+          <div class="justify-content-end">
+            <a routerLink="/list/{{product.productId}}" class="btn btn-outline-dark">Details</a>
+          </div>
+        </div>
+
     </div>
   </div>
-</div>
