--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,10 +1,14 @@
-<div class="col-sm-3">
-  <div class="card" style="width: 18rem;">
-    <div class="card-block">
-      <h5 class="card-title">{{product$.name}}</h5>
-      <p class="card-text" [innerHTML]="product$.price"></p>
-      <p class="card-text">Type: {{product$.description}}</p>
-      <a routerLink="/list/" class="btn btn-primary">Go back</a>
+<div class="container p-5 row justify-content-center ">
+
+  <div class="col-sm-3">
+    <div class="card p-3" style="width: 18rem;">
+      <div class="card-block">
+        <h5 class="card-title">{{ product$.name }}</h5>
+        <p class="card-text" [innerHTML]="'Prix :'+product$.price"></p>
+        <p class="card-text">Description: {{ product$.description }}</p>
+        <a routerLink="" class="btn btn-primary">Go back</a>
+      </div>
     </div>
+
   </div>
 </div>
