--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,8 +1,9 @@
-works
-<div class="container">
-  <div class="row">
-    <app-product-card  *ngFor="let product of products" [product]="product">
-    </app-product-card>
+<div class="container ">
+  <div class="row justify-content-center row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+
+      <app-product-card *ngFor="let product of products" [product]="product">
+      </app-product-card>
+
   </div>
 </div>
-i work
+
