--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -2,6 +2,7 @@
 
   <div class="col-sm-3">
     <div class="card p-3" style="width: 18rem;">
+      <img class="card-img-top"  alt = "image" src="/assets/{{product$.imgPath}}">
       <div class="card-block">
         <h5 class="card-title">{{ product$.name }}</h5>
         <p class="card-text" [innerHTML]="'Prix :'+product$.price"></p>
