--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
-<div class="container p-5 row justify-content-center ">
+<div class="container p-5 row justify-content-center align-items-center ">
 
-  <div class="col-sm-3">
+  <div class="col-sm-3 ">
     <div class="card p-3" style="width: 18rem;">
       <img class="card-img-top"  alt = "image" src="/assets/{{product$.imgPath}}">
       <div class="card-block">
